--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,10 @@ remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Alan Axel Castro Reséndiz.
+education:
+  - degree: Bachelor of Science in Computer Science
+    institution: Your University
+    year: 2022
+  - degree: Master of Technology in Software Engineering
+    institution: Your Graduate School
+    year: 2024
