--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ plugins:
 title: Alan Axel Castro Reséndiz.
 education:
   - degree: Bachelor of Science in Computer Science
-    institution: Your University
-    year: 2022
+    institution: Universidad Autónoma de San Luis Potosí
+    Start Year: 2020/08-2025-06
   - degree: Master of Technology in Software Engineering
     institution: Your Graduate School
     year: 2024
