--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Alan Axel Castro Reséndiz.
+title: Alan Axel Castro Reséndizzz
 education:
   - degree: Bachelor of Science in Computer Science
     institution: Universidad Autónoma de San Luis Potosí
