--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,4 @@
 remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Alan Axel Castro Reséndizzz
-education:
-  - degree: Bachelor of Science in Computer Science
-    institution: Universidad Autónoma de San Luis Potosí
-    Start Year: 2020/08-2025-06
-  - degree: Certificate
-    institution: AI Lab School
-    year: 2023/07-2024/07
+title: Alan Axel Castro Reséndiz.
