--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Alan Axel Castro Reséndiz.
 
 # logo:assets/img/image.png
 show_downloads: true
-theme: jekyll-remote-theme
+theme: jekyll-theme-minimal
