--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alan Axel Castro Reséndiz.
 # description:
 # logo:assets/img/image.png
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
